# EventTracker

./: .gitignore  CMakeLists.txt  README.md
android/: AndroidManifest.xml  build.gradle  google-services.json  gradle.properties
animations/: login_success.json
api/: main.py
include/: auth.hpp  database.hpp  events.hpp  events_api.hpp  firebase_auth.hpp  firebase_firestore.hpp
qml/: Main.qml
qml/components/: EventDelegate.qml
qml/pages/: HomeScreen.qml  LoginScreen.qml
src/: HomeScreen.qml  LoginScreen.qml  Main.qml  SignupScreen.qml  auth.cpp  database.cpp  events.cpp  events_api.cpp  firebase_auth.cpp  firebase_firestore.cpp  main.cpp
src/pages/: HomeScreen.qml  LoginScreen.qml  SignupScreen.qml
ui/components/: BusyPopup.qml  CredentialsField.qml  ErrorLabel.qml
ui/pages/: HomeScreen.qml  LoginScreen.qml  SignupScreen.qml
ui/pages/signup/: FinalScreen.qml  InitialScreen.qml
